# server/routes/auth.js
@@ -7,6 +7,7 @@ const auth = require('../controllers/auth.controller')
 router.post('/login', auth.signin);
 router.post('/logout', afterSignupAuth, auth.logout)
 router.post('/signup', auth.validate(), auth.signup)
+router.post('/generate-hash', auth.generateHash)
 router.get('/subscription', auth.getSubscriptionPlan)
 
 module.exports = router
